test/parsing/ferguson/reserved-uint.chpl
var uint = 0;

proc f(uint) {
}

class uint {
  var uint =0;
}

type uint = real;

proc uint() {
}

proc test() {
  try {
  } catch uint {
  }
}
